tests/samples/invalid/var_in_naked_branch.pn
fn main() -> i32
{
	var x: i32 = 33;
	if x == 100
		var result = 500;
	return: result
}
